--- a/config.ini
+++ b/config.ini
@@ -2,4 +2,17 @@
 
 phrases = battery storage,microgrids,minigrids,demand response,energy efficiency,multi-unit housing,Non-Wires Alternative,NWA,transformer,substation,circuit,Smart cities,frequency
 
+[aep]
+
+aep_ohio_url = http://www.aepohio.com/b2b/rfp/
+aep_texas_url = http://www.aeptexas.com/b2b/
+appalachian_power_url = http://www.appalachianpower.com/b2b/rfp/
+indiana_michigan_url = http://www.indianamichiganpower.com/b2b/rfp/
+kentucky_power_url = http://www.kentuckypower.com/b2b/rfp/
+public_service_company_of_oklahoma_url = http://www.psoklahoma.com/b2b/rfp/
+southwestern_electric_power_company_url = http://www.swepco.com/b2b/rfp/
+
+
+[puerto_rico_government]
+
 puerto_rico_government_url = http://www.p3.pr.gov/prepa-transformation.html
