Dominion RSS Feed

--- a/config.ini
+++ b/config.ini
@@ -43,3 +43,12 @@ rge_url = https://bit.ly/2NMpxif
 [san_diego_gas_and_electric]
 
 san_diego_gas_and_electric_url = https://www.sdge.com/more-information/doing-business-with-us/rfps-rfos
+
+[pg_e]
+
+pg_e_url = https://www.pge.com/en_US/for-our-business-partners/purchasing-program/bid-opportunities/bid-opportunities.page
+
+[dominion_energy]
+
+dominion_energy_url = https://www.dominionenergy.com/company/making-energy/renewable-generation/rfp-solar-wind
+dominion_energy_rss_url = https://news.dominionenergy.com/news?pagetemplate=rss
